update theme styles

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*-----------------------------------------------------------------------------
-    Theme Name:  ELR Portfolio
-    Theme URI:   github.com/Beth3346/elr-portfolio.git
-    Version:     1.5.0
+    Theme Name:  Cindy Portfolio
+    Theme URI:   github.com/Beth3346/cindy-portfolio.git
+    Version:     0.0.1
     Author:      Elizabeth Rogers
     Email:       beth@elizabeth-rogers.com
     Website:     elizabeth-rogers.com
